2020-04-21  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Renamed ToTitleCasePawnName to
	ToTitleCaseProperName, and added two other categories:
	ToTitleCaseOtherName (for trader ships and faction names),
	ToTitleCaseOther (for generic titles: quest scripts titles
	mostly).
	The different types of names and titles are hacked from the
	callstack and logged in debug mode for verification. List of
	semantic contexts : QuestName, PawnName, SettlementName,
	WorldFeatureName, FactionName, ArtName, OtherName, OtherTitle.

	* StatsLogger.cs: class CallerStats now records the
	method.DeclaringType. The Hashkey uses the user-defined string
	and the method name.

2020-04-18  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: Last name in NameTriple was
	not capitalized if from tribal words. Added ToTitleCase() for
	pawn names.
	NB: There are different semantic contexts for ToTitleCase().
	A temporary solution using System.Reflection is used to detect
	these, waiting for an integration of the methods in the
	LangagueWorker base class.

	* StatsLogger.cs: Generated stats are split according to the
	debug contexts.

	* StringExtension.cs: String extenstion helper: capitalize
	sub-words inside hyphenated ones for ToTitleCase() (cf class
	Verse.GenText.)

2020-04-15  b606  <7627533+b606@users.noreply.github.com>

	* StatsLogger.cs: More complete and ready to use graph data.
	All strings stats are dumped in one CSV table. The call graph
	is generated in DOT file.

2020-04-12  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Moved debug instrumentation
	classes out of main class.

	* RimWorld_LanguageWorker_French.csproj: Added two debug
	instrumentation classes

	* Logger.cs: for files IO in the temporary folder.

	* StatsLogger.cs: handles all the profiling logics. Added
	custom caller methods stats and processed strings stats to
	detect where to improve. Processed strings show hit counts and